common/force-app/main/default/objects/Product2/fields/AFSL_Licence__c.field-meta.xml
<CustomField>
    <fullName>AFSL_Licence__c</fullName>
    <label>AFSL Licence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>GSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>