common/force-app/main/default/objects/Product2/fields/Agency_Listing__c.field-meta.xml
<CustomField>
    <fullName>Agency_Listing__c</fullName>
    <label>Agency Listing</label>
    <type>Url</type>
</CustomField>