common/force-app/main/default/objects/Product2/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>EOI Listing Fee</fullName>
            </value>
            <value>
                <fullName>Retail Pro</fullName>
            </value>
            <value>
                <fullName>Wholesale Pro</fullName>
            </value>
            <value>
                <fullName>Retail Premium</fullName>
            </value>
            <value>
                <fullName>Wholesale Premium</fullName>
            </value>
            <value>
                <fullName>Friends &amp; Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>