common/force-app/main/default/objects/Product2/fields/Air_Conditioning_HC__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning_HC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Heating &amp; Cooling</inlineHelpText>
    <label>Air Conditioning</label>
    <type>Checkbox</type>
</CustomField>