common/force-app/main/default/objects/Product2/fields/Alarm_System_IF__c.field-meta.xml
<CustomField>
    <fullName>Alarm_System_IF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indoor Feature</inlineHelpText>
    <label>Alarm System</label>
    <type>Checkbox</type>
</CustomField>