common/force-app/main/default/objects/Product2/fields/Avg_Total_Opp_Unit_Cert_Amount__c.field-meta.xml
<CustomField>
    <fullName>Avg_Total_Opp_Unit_Cert_Amount__c</fullName>
    <formula>Total_Opp_Unit_Cert_Amount__c /  Total_Closed_WON_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg of Total Opp Unit Cert Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>