common/force-app/main/default/objects/Product2/fields/Banner_Date_Validation__c.field-meta.xml
<CustomField>
    <fullName>Banner_Date_Validation__c</fullName>
    <description>We are going to use this field to sync up the raiseBanners in the website</description>
    <formula>NOW() &lt; Offer_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>We are going to use this field to sync up the raiseBanners in the website</inlineHelpText>
    <label>Banner Date Validation</label>
    <type>Checkbox</type>
</CustomField>