common/force-app/main/default/objects/Product2/fields/Barbeque_Facilities_CB__c.field-meta.xml
<CustomField>
    <fullName>Barbeque_Facilities_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Community Benefits</inlineHelpText>
    <label>Barbeque Facilities</label>
    <type>Checkbox</type>
</CustomField>