common/force-app/main/default/objects/Product2/fields/Body_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Body_Corporate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Body Corporate</label>
    <type>Checkbox</type>
</CustomField>