common/force-app/main/default/objects/Product2/fields/Body_Corporate_Fee__c.field-meta.xml
<CustomField>
    <fullName>Body_Corporate_Fee__c</fullName>
    <label>Body Corporate Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>