common/force-app/main/default/objects/Product2/fields/Broadband_Internet_Available_IF__c.field-meta.xml
<CustomField>
    <fullName>Broadband_Internet_Available_IF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indoor Feature</inlineHelpText>
    <label>Broadband Internet Available</label>
    <type>Checkbox</type>
</CustomField>