common/force-app/main/default/objects/Product2/fields/Brochure__c.field-meta.xml
<CustomField>
    <fullName>Brochure__c</fullName>
    <label>Brochure</label>
    <type>Url</type>
</CustomField>