common/force-app/main/default/objects/Product2/fields/Built_in_Wardrobes_IF__c.field-meta.xml
<CustomField>
    <fullName>Built_in_Wardrobes_IF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indoor Feature</inlineHelpText>
    <label>Built in Wardrobes</label>
    <type>Checkbox</type>
</CustomField>