common/force-app/main/default/objects/Product2/fields/Capital_Allocation_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Capital_Allocation_Agreement__c</fullName>
    <label>Capital Allocation Agreement</label>
    <length>200</length>
    <type>Text</type>
</CustomField>