common/force-app/main/default/objects/Product2/fields/Car_Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Spaces__c</fullName>
    <formula>VALUE( TEXT(Carport_Spaces__c)) +  VALUE(TEXT(Garage_Spaces__c)) +  VALUE(TEXT(Open_Parking_Spaces__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Parking Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>