common/force-app/main/default/objects/Product2/fields/Children_s_Playground_CB__c.field-meta.xml
<CustomField>
    <fullName>Children_s_Playground_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Community Benefits</inlineHelpText>
    <label>Children&apos;s Playground</label>
    <type>Checkbox</type>
</CustomField>