common/force-app/main/default/objects/Product2/fields/Compounding_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Compounding_Frequency__c</fullName>
    <description>This defines how the interest is going to be paid to the investor</description>
    <inlineHelpText>This defines how the interest is going to be paid to the investor</inlineHelpText>
    <label>Compounding Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compounding_Frequency</valueSetName>
    </valueSet>
</CustomField>