common/force-app/main/default/objects/Product2/fields/Contracts_Administration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Administration_Fee__c</fullName>
    <formula>Contracts_Administrator__r.Contracts_Administration_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracts Administration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>