common/force-app/main/default/objects/Product2/fields/Contracts_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Look up the name of the contract and sales administrator for this stage.</inlineHelpText>
    <label>Contracts Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products4</relationshipName>
    <type>Lookup</type>
</CustomField>