common/force-app/main/default/objects/Product2/fields/Council_Rates__c.field-meta.xml
<CustomField>
    <fullName>Council_Rates__c</fullName>
    <label>Council Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>