common/force-app/main/default/objects/Product2/fields/Courtyard_OF__c.field-meta.xml
<CustomField>
    <fullName>Courtyard_OF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Outdoor Feature</inlineHelpText>
    <label>Courtyard</label>
    <type>Checkbox</type>
</CustomField>