common/force-app/main/default/objects/Product2/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <description>Field to be used to create a custom list view on the product object, the list view is &quot;My Products&quot;</description>
    <formula>CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field to be used to create a custom list view on the product object, the list view is &quot;My Products&quot;</inlineHelpText>
    <label>Creator</label>
    <type>Text</type>
</CustomField>