common/force-app/main/default/objects/Product2/fields/CSF_Offer_Text__c.field-meta.xml
<CustomField>
    <fullName>CSF_Offer_Text__c</fullName>
    <defaultValue>&apos;Means the offer document of the Issuer relating to the offer of shares in the Issuer available on the VentureCrowd website on the date of this application.&apos;</defaultValue>
    <description>this field is utilised on contract modal</description>
    <inlineHelpText>this field is utilised on contract modal</inlineHelpText>
    <label>CSF Offer Text</label>
    <type>TextArea</type>
</CustomField>