common/force-app/main/default/objects/Product2/fields/Customer_SPV__c.field-meta.xml
<CustomField>
    <fullName>Customer_SPV__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The name of the company that this product belongs to.</description>
    <inlineHelpText>The VC company or the SPV.</inlineHelpText>
    <label>Customer SPV</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Customer)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>