common/force-app/main/default/objects/Product2/fields/Deal_Description__c.field-meta.xml
<CustomField>
    <fullName>Deal_Description__c</fullName>
    <label>Deal Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>