common/force-app/main/default/objects/Product2/fields/Deal_Partner__c.field-meta.xml
<CustomField>
    <fullName>Deal_Partner__c</fullName>
    <label>Deal Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uniseed</fullName>
            </value>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Sydney Angels</fullName>
            </value>
            <value>
                <fullName>BlueChilli</fullName>
            </value>
            <value>
                <fullName>Clearstate</fullName>
            </value>
            <value>
                <fullName>Dominet</fullName>
            </value>
            <value>
                <fullName>Adrian Bunter</fullName>
            </value>
            <value>
                <fullName>Homecorp</fullName>
                <isActive>false</isActive>
                <label>Homecorp</label>
            </value>
            <value>
                <fullName>LJ Hooker Helensvale</fullName>
                <isActive>false</isActive>
                <label>LJ Hooker Helensvale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>