common/force-app/main/default/objects/Product2/fields/Depreciation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Schedule__c</fullName>
    <inlineHelpText>Link to the depreciation schedule sample</inlineHelpText>
    <label>Depreciation Schedule</label>
    <type>Url</type>
</CustomField>