common/force-app/main/default/objects/Product2/fields/Development_Name__c.field-meta.xml
<CustomField>
    <fullName>Development_Name__c</fullName>
    <formula>Masterplan__r.Master_Plan__r.Development_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Name</label>
    <type>Text</type>
</CustomField>