common/force-app/main/default/objects/Product2/fields/Disclaimers__c.field-meta.xml
<CustomField>
    <fullName>Disclaimers__c</fullName>
    <label>Disclaimers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>