common/force-app/main/default/objects/Product2/fields/Dishwasher_IF__c.field-meta.xml
<CustomField>
    <fullName>Dishwasher_IF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indoor Feature</inlineHelpText>
    <label>Dishwasher</label>
    <type>Checkbox</type>
</CustomField>