common/force-app/main/default/objects/Product2/fields/Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Type__c</fullName>
    <label>Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>yielding__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest Paid</fullName>
            </value>
            <value>
                <fullName>Accruing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>