common/force-app/main/default/objects/Product2/fields/DM_Google_Drive_Folder__c.field-meta.xml
<CustomField>
    <fullName>DM_Google_Drive_Folder__c</fullName>
    <label>DM Google Drive Folder</label>
    <type>Url</type>
</CustomField>