common/force-app/main/default/objects/Product2/fields/Domain_Link__c.field-meta.xml
<CustomField>
    <fullName>Domain_Link__c</fullName>
    <inlineHelpText>Link to Domain listing</inlineHelpText>
    <label>Domain Link</label>
    <type>Url</type>
</CustomField>