common/force-app/main/default/objects/Product2/fields/Ducted_Vacuum_System_IF__c.field-meta.xml
<CustomField>
    <fullName>Ducted_Vacuum_System_IF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indoor Feature</inlineHelpText>
    <label>Ducted Vacuum System</label>
    <type>Checkbox</type>
</CustomField>