common/force-app/main/default/objects/Product2/fields/Easements__c.field-meta.xml
<CustomField>
    <fullName>Easements__c</fullName>
    <inlineHelpText>Details and link to any easements on this lot</inlineHelpText>
    <label>Easements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>