common/force-app/main/default/objects/Product2/fields/ESIC_Approved__c.field-meta.xml
<CustomField>
    <fullName>ESIC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ESIC Approved</label>
    <type>Checkbox</type>
</CustomField>