common/force-app/main/default/objects/Product2/fields/Evaporative_Cooling_HC__c.field-meta.xml
<CustomField>
    <fullName>Evaporative_Cooling_HC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Heating &amp; Cooling</inlineHelpText>
    <label>Evaporative Cooling</label>
    <type>Checkbox</type>
</CustomField>