common/force-app/main/default/objects/Product2/fields/Exit_History__c.field-meta.xml
<CustomField>
    <fullName>Exit_History__c</fullName>
    <label>Exit History</label>
    <length>200</length>
    <type>Text</type>
</CustomField>