common/force-app/main/default/objects/Product2/fields/Finacial_Services_Guide__c.field-meta.xml
<CustomField>
    <fullName>Finacial_Services_Guide__c</fullName>
    <inlineHelpText>Retail MIS</inlineHelpText>
    <label>Financial Services Guide</label>
    <type>Url</type>
</CustomField>