common/force-app/main/default/objects/Product2/fields/Finance_Owner__c.field-meta.xml
<CustomField>
    <fullName>Finance_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>