common/force-app/main/default/objects/Product2/fields/Financial_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Financial_Snapshot__c</fullName>
    <label>Financial Snapshot</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>