common/force-app/main/default/objects/Product2/fields/Floor_Plans__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plans__c</fullName>
    <label>Floor Plans</label>
    <type>Url</type>
</CustomField>