common/force-app/main/default/objects/Product2/fields/Floorboards_IF__c.field-meta.xml
<CustomField>
    <fullName>Floorboards_IF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indoor Feature</inlineHelpText>
    <label>Floorboards</label>
    <type>Checkbox</type>
</CustomField>