common/force-app/main/default/objects/Product2/fields/Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text__c</fullName>
    <label>Footer Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>