common/force-app/main/default/objects/Product2/fields/Forecast_Registration_Date1__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Registration_Date1__c</fullName>
    <formula>Masterplan__r.Forecast_Registration_Date_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Registration Date</label>
    <type>Date</type>
</CustomField>