common/force-app/main/default/objects/Product2/fields/Forecast_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Registration_Date__c</fullName>
    <description>The current forecasted date of registration as advised by the Development Managers</description>
    <inlineHelpText>The current forecasted date of registration as advised by the Development Managers</inlineHelpText>
    <label>Forecast Registration Date</label>
    <type>Date</type>
</CustomField>