common/force-app/main/default/objects/Product2/fields/Forecasted_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Completion_Date__c</fullName>
    <label>Forecasted Completion Date</label>
    <type>Date</type>
</CustomField>