common/force-app/main/default/objects/Product2/fields/Forecasted_Funding_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Funding_Timeline__c</fullName>
    <label>Forecasted Funding Timeline</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>