common/force-app/main/default/objects/Product2/fields/Founder__c.field-meta.xml
<CustomField>
    <fullName>Founder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Founder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Products (Founder)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>