common/force-app/main/default/objects/Product2/fields/FSS_Fund_Summary_Sheet__c.field-meta.xml
<CustomField>
    <fullName>FSS_Fund_Summary_Sheet__c</fullName>
    <label>FSS Fund Summary Sheet</label>
    <type>Url</type>
</CustomField>