common/force-app/main/default/objects/Product2/fields/Fully_Fenced_OF__c.field-meta.xml
<CustomField>
    <fullName>Fully_Fenced_OF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Outdoor Feature</inlineHelpText>
    <label>Fully Fenced</label>
    <type>Checkbox</type>
</CustomField>