common/force-app/main/default/objects/Product2/fields/Fully_Funded__c.field-meta.xml
<CustomField>
    <fullName>Fully_Funded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fully Funded</label>
    <type>Checkbox</type>
</CustomField>