common/force-app/main/default/objects/Product2/fields/Fully_Funded_Closed__c.field-meta.xml
<CustomField>
    <fullName>Fully_Funded_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box only when the deal is closed to further investments. This can be after being fully funded, oversubscribed or under subscribed.</inlineHelpText>
    <label>Fully Funded Closed</label>
    <type>Checkbox</type>
</CustomField>