common/force-app/main/default/objects/Product2/fields/Fully_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Fully_Funded_Date__c</fullName>
    <label>Fully Funded Date</label>
    <type>Date</type>
</CustomField>