common/force-app/main/default/objects/Product2/fields/Fund_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Fund_Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Auditor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Fund Auditor)</relationshipLabel>
    <relationshipName>Products4</relationshipName>
    <type>Lookup</type>
</CustomField>