common/force-app/main/default/objects/Product2/fields/Fund_Manager__c.field-meta.xml
<CustomField>
    <fullName>Fund_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Fund Management company that holds the AFSL for this product</description>
    <inlineHelpText>Name of the Fund Management company that holds the AFSL for this product</inlineHelpText>
    <label>Fund Manager</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>