common/force-app/main/default/objects/Product2/fields/Funding_Owner__c.field-meta.xml
<CustomField>
    <fullName>Funding_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>