common/force-app/main/default/objects/Product2/fields/FY22_Tax_Statement_Required__c.field-meta.xml
<CustomField>
    <fullName>FY22_Tax_Statement_Required__c</fullName>
    <label>FY22 Tax Statement Required?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>