common/force-app/main/default/objects/Product2/fields/FY_22_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>FY_22_Unit_Price__c</fullName>
    <label>FY 22 Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>