common/force-app/main/default/objects/Product2/fields/Gas_Heating_HC__c.field-meta.xml
<CustomField>
    <fullName>Gas_Heating_HC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Heating &amp; Cooling</inlineHelpText>
    <label>Gas Heating</label>
    <type>Checkbox</type>
</CustomField>