common/force-app/main/default/objects/Product2/fields/General_CSF_Risk_Warning__c.field-meta.xml
<CustomField>
    <fullName>General_CSF_Risk_Warning__c</fullName>
    <description>This field is utilised on Invest now page</description>
    <label>General CSF Risk Warning</label>
    <type>Url</type>
</CustomField>