common/force-app/main/default/objects/Product2/fields/General_Risk_Warning__c.field-meta.xml
<CustomField>
    <fullName>General_Risk_Warning__c</fullName>
    <label>General Risk Warning</label>
    <type>Url</type>
</CustomField>