common/force-app/main/default/objects/Product2/fields/General_Warnig_Statement__c.field-meta.xml
<CustomField>
    <fullName>General_Warnig_Statement__c</fullName>
    <inlineHelpText>Retail MIS</inlineHelpText>
    <label>General Warning Statement</label>
    <type>Url</type>
</CustomField>