common/force-app/main/default/objects/Product2/fields/Generate_Terms_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Generate_Terms_of_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Terms of Issue</label>
    <type>Checkbox</type>
</CustomField>