common/force-app/main/default/objects/Product2/fields/Grey_Water_System_EFF__c.field-meta.xml
<CustomField>
    <fullName>Grey_Water_System_EFF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Eco Friendly Features</inlineHelpText>
    <label>Grey Water System</label>
    <type>Checkbox</type>
</CustomField>