common/force-app/main/default/objects/Product2/fields/Gross_administration_management_fee__c.field-meta.xml
<CustomField>
    <fullName>Gross_administration_management_fee__c</fullName>
    <formula>Gross_SPV_Sale_Price__c  *  Sales_management_administration_fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross administration management fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>