common/force-app/main/default/objects/Product2/fields/Gross_Commission__c.field-meta.xml
<CustomField>
    <fullName>Gross_Commission__c</fullName>
    <formula>Gross_Sales_Commission__c * Gross_SPV_Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Add the % of agreed sales commission to VCPP. (Including GST)</inlineHelpText>
    <label>Gross Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>