common/force-app/main/default/objects/Product2/fields/Gross_SPV_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_SPV_Sale_Price__c</fullName>
    <inlineHelpText>The gross sale price to the SPV before any costs including commissions are paid.
This field is exclusive for VCPP</inlineHelpText>
    <label>Gross SPV Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>