common/force-app/main/default/objects/Product2/fields/Grouped_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Grouped_Dashboard__c</fullName>
    <label>Grouped Dashboard</label>
    <type>Url</type>
</CustomField>