common/force-app/main/default/objects/Product2/fields/Gymnasium_CB__c.field-meta.xml
<CustomField>
    <fullName>Gymnasium_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Community Benefits</inlineHelpText>
    <label>Gymnasium</label>
    <type>Checkbox</type>
</CustomField>