common/force-app/main/default/objects/Product2/fields/Heating_Cooling_HC__c.field-meta.xml
<CustomField>
    <fullName>Heating_Cooling_HC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Heating &amp; Cooling</inlineHelpText>
    <label>Heating/Cooling</label>
    <type>Checkbox</type>
</CustomField>