common/force-app/main/default/objects/Product2/fields/Holding_Trust_Number__c.field-meta.xml
<CustomField>
    <fullName>Holding_Trust_Number__c</fullName>
    <formula>VALUE(
  MID(
    Trust_Deed_Name__c,
    FIND(&quot;No. &quot;, Trust_Deed_Name__c) + 4, 
    FIND(&quot; &quot;, Trust_Deed_Name__c, FIND(&quot;No. &quot;, Trust_Deed_Name__c) + 4) - (FIND(&quot;No. &quot;, Trust_Deed_Name__c) + 4)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holding Trust Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>